--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,18 +10,17 @@ jobs:
     runs-on: "ubuntu-22.04"
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Login to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.PAT }}
 
+      - name: Build Image 
+        run: docker-compose build
 
-      - name: Build and Push to GHCR
-        run: |
-
-          docker-compose build
-          docker-compose push
+      - name: Push to GHCR
+        run: docker-compose push
