Pull image from repo
managed to successfully push the image, now pulling the image.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: Push to GHCR
         run: docker-compose push
+
+      - name: Pull
+        run: docker pull ghcr.io/ohthatmagicfeelin/actions-playground:latest
