Caching in Docker Compose
cache_from must be in build context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
+version: '3.8'
 services:
   nginx:
     image: ghcr.io/ohthatmagicfeelin/actions-playground/nginx:latest
-    build: .
-    cache_from: ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
-    cahche_to: ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
+    build: 
+      context: .
+      cache_from: 
+      - ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
+    # cahche_to: ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
