--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "2.26"
+version: "3.9"
 services:
   nginx:
     image: ghcr.io/ohthatmagicfeelin/actions-playground/nginx:latest
     build: 
       context: .
-      cache_from: 
-      - ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
-      cache_to:
-      - ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
+      # cache_from: 
+      # - ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
+      # cache_to:
+      # - ghcr.io/ohthatmagicfeelin/actions-playground/nginx:buildcache
