--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,3 +31,29 @@ jobs:
 
       - name: Pull
         run: docker pull ghcr.io/ohthatmagicfeelin/actions-playground:latest
+
+
+
+      - name: Copy Production docker-compose.yml via SCP
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ vars.HOST }}
+          username: ${{ vars.USERNAME }}
+          port: ${{ vars.PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "./docker-compose.prod.yml"
+          target: "/home/webapp-runner/app1"
+
+
+      - name: Executing remote command
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ vars.HOST }}
+          username: ${{ vars.USERNAME }}
+          port: ${{ vars.PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
+            cd /home/webapp-runner/app1
+            sudo docker compose -f ./docker-compose.prod.yml pull
+            sudo docker compose -f ./docker-compose.prod.yml up -d
