--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -54,6 +54,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
-            cd /home/webapp-runner/app1
-            sudo docker compose -f ./docker-compose.prod.yml pull
-            sudo docker compose -f ./docker-compose.prod.yml up -d
+          # cd /home/webapp-runner/app1
+          # sudo docker compose -f ./docker-compose.prod.yml pull
+          # sudo docker compose -f ./docker-compose.prod.yml up -d
