build(ssh): try to pull and spin up images on vps \n Copy didn't work correctly, debugging

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -41,19 +41,19 @@ jobs:
           username: ${{ vars.USERNAME }}
           port: ${{ vars.PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./docker-compose.prod.yml"
+          source: "."
           target: "/home/webapp-runner/app1"
 
 
-      - name: Executing remote command
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ vars.HOST }}
-          username: ${{ vars.USERNAME }}
-          port: ${{ vars.PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
-          # cd /home/webapp-runner/app1
-          # sudo docker compose -f ./docker-compose.prod.yml pull
-          # sudo docker compose -f ./docker-compose.prod.yml up -d
+      # - name: Executing remote command
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ vars.HOST }}
+      #     username: ${{ vars.USERNAME }}
+      #     port: ${{ vars.PORT }}
+      #     key: ${{ secrets.SSH_KEY }}
+      #     script: |
+      #       docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
+      #       cd /home/webapp-runner/app1
+      #       sudo docker compose -f ./docker-compose.prod.yml pull
+      #       sudo docker compose -f ./docker-compose.prod.yml up -d
