--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,7 +32,11 @@ jobs:
       - name: Pull
         run: docker pull ghcr.io/ohthatmagicfeelin/actions-playground:latest
 
-
+      - name: run
+        run: |
+          echo ${{ vars.HOST }}
+          echo ${{ vars.USERNAME }}
+          echo ${{ vars.PORT }}
 
       - name: Copy Production docker-compose.yml via SCP
         uses: appleboy/scp-action@master
