build(ssh): try to pull and spin up images on vps \n ssh not working.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -51,6 +51,7 @@ jobs:
           username: ${{ vars.USERNAME }}
           port: ${{ vars.PORT }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
               ls
       #       docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
