okay, it worked, but why. Are variable snot being read properly?

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           host: 77.37.47.158
           username: webapp-runner
-          port: 22
+          port: ${{ vars.PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: |
               ls
