--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -52,7 +52,9 @@ jobs:
           port: ${{ vars.PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            docker logout
             docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
             cd /home/webapp-runner/app1
-            sudo docker compose -f ./docker-compose.yml pull
+            sudo docker pull ghcr.io/ohthatmagicfeelin/actions-playground:latest
+          # sudo docker compose -f ./docker-compose.yml pull
       #       sudo docker compose -f ./docker-compose.prod.yml up -d
