build(ghcr): login and pull image from ghcr \n pull not working

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -53,8 +53,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             docker logout
-            docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
             cd /home/webapp-runner/app1
             sudo docker pull ghcr.io/ohthatmagicfeelin/actions-playground:latest
+          # docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.PAT }}
           # sudo docker compose -f ./docker-compose.yml pull
       #       sudo docker compose -f ./docker-compose.prod.yml up -d
